# MinecraftClone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md  The game.sln  run-mcc.ps1  run-shadberry-tests.ps1
Samples/MinecraftClone/: CMakeLists.txt  main.cpp  vcpkg.json
Shadberry/: CMakeLists.txt  vcpkg.json
Shadberry/Core/: Console.hpp  Source.cpp
Shadberry/Public/: Version.hpp
Shadberry/System/Public/: Console.hpp
Shadberry/Tests/: main.cpp
The game/: Camera.cpp  Camera.h  Config.cpp  Config.h  Defs.h  FBO.cpp  FBO.h  Model.cpp  Model.h  Model2D.cpp  Model2D.h  Object.h  The game.vcxproj  The game.vcxproj.filters  TheGame.cpp
The game/Entity/: Entity.cpp  Entity.h  EntityBase.cpp  EntityBase.h  Player.cpp  Player.h
The game/GL/: GLLight.h  GLMaterial.h
cmake/: PackageConfig.cmake.in  common.cmake  submodule.cmake
scripts/: build_shaders.ps1  build_shaders.sh  run-common.ps1
src/: CMakeLists.txt  Config.cpp  Config.hpp  Resources.cpp  Resources.hpp  main.cpp
src/Core/: CMakeLists.txt
src/Core/Algorithm/: ArrayUtils.hpp  Iterable.hpp  Iterator.hpp  IteratorAdapter.hpp  IteratorConcepts.hpp  Zip.hpp
src/Core/Collection/: ArrayView.hpp  DynArray.hpp
src/Core/Common/: Assert.cpp  Assert.hpp  Assume.hpp  Defer.hpp  DurationToString.cpp  DurationToString.hpp  Enum.hpp  Int.hpp  NonCopyable.hpp  NonMovable.hpp  Random.cpp  Random.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  Version.cpp  Version.hpp
src/Core/Common/Tests/: DeferTest.cpp  IntTest.cpp  TimeTest.cpp
src/Core/Container/: ArrayView.hpp  DynArray.hpp  Image.hpp  StringView.hpp  UniquePtr.hpp
src/Core/Container/Tests/: DynArrayTest.cpp  UniquePtrTest.cpp
src/Core/File/: BinaryFile.hpp  BmpImageFile.cpp  BmpImageFile.hpp  File.cpp  File.hpp  ImageFile.cpp  ImageFile.hpp
src/Core/IO/: ArgumentParser.hpp  Console.cpp  Console.hpp  ConsoleColor.cpp  ConsoleColor.hpp  File.cpp  File.hpp  Logger.cpp  Logger.hpp
src/Core/Instrinsic/: Simd.hpp
src/Core/Instrinsic/Internal/: SSE.hpp  SimdVec.hpp
src/Core/Macro/: Attributes.hpp  Compiler.hpp  LanguageVersion.hpp  NoOpt.cpp  NoOpt.hpp  OS.hpp
src/Core/Math/: Angles.hpp  Color.hpp  Mat.hpp  Transform.cpp  Transform.hpp  Vec.hpp  VecOps.cpp  VecOps.hpp
src/Core/Math/Tests/: MatTest.cpp  TransformTest.cpp  VecTest.cpp
src/Core/Memory/: Exchange.hpp  Forward.hpp  Function.hpp  Move.hpp  OutOfMemoryException.hpp  RawArray.hpp  RawMemory.cpp  RawMemory.hpp  TypeErasedAccessor.hpp  TypeErasedObject.cpp  TypeErasedObject.hpp  UniquePtr.hpp
src/Core/Memory/Tests/: FunctionTest.cpp  UniquePtrTest.cpp
src/Core/Meta/: Any.hpp  Decay.hpp  FloatingPoint.hpp  FunctionConcepts.hpp  FunctionDecomposition.hpp  If.hpp  IsArray.hpp  IsSame.hpp  TypeList.hpp  UnConst.hpp  UnPtr.hpp  UnRef.hpp  Void.hpp
src/Core/OS/: Debug.cpp  Debug.hpp  OS.hpp  SignalHandler.cpp  SignalHandler.hpp
src/Core/Test/: TestMain.cpp  TestMain.hpp  UnitTest.cpp  UnitTest.hpp
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp
src/Engine/Entity/: Entity.hpp  Player.cpp  Player.hpp
src/Graphics/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.hpp  Window.cpp  Window.hpp
src/Graphics/Renderer/Pipelines/: VoxelPipeline.hpp
src/Graphics/Shader/: voxel.frag  voxel.vert
src/Graphics/Vulkan/: Check.cpp  Check.hpp  Device.cpp  Device.hpp  Exception.hpp  Extensions.cpp  Extensions.hpp  Functions.cpp  Functions.hpp  Instance.cpp  Instance.hpp  Layers.cpp  Layers.hpp  PipelineOptions.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Version.cpp  Version.hpp  Vulkan.cpp  Vulkan.hpp  VulkanManager.cpp  VulkanManager.hpp
src/Graphics/Vulkan/Internal/: CMakeLists.txt  Check.cpp  Check.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  Framebuffers.cpp  Framebuffers.hpp  Functions.cpp  Functions.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  QueueFamilies.cpp  QueueFamilies.hpp  RenderPass.cpp  RenderPass.hpp  Semaphore.cpp  Semaphore.hpp  ShaderModule.cpp  ShaderModule.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainSupport.cpp  SwapchainSupport.hpp
src/Graphics/Vulkan/Internal/Buffer/: Buffer.cpp  Buffer.hpp  BufferType.hpp  BufferTypeBit.hpp  CopyBuffer.cpp  CopyBuffer.hpp  Image.cpp  Image.hpp  IndexBuffer.hpp  IndexType.hpp  MappedMemory.hpp  VertexBuffer.hpp
src/Graphics/Vulkan/Internal/Command/: CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferUsageBit.hpp  CommandPool.cpp  CommandPool.hpp  CommandPoolTypeBit.hpp  Queue.cpp  Queue.hpp  QueueFamilies.cpp  QueueFamilies.hpp  QueueType.hpp
src/Graphics/Vulkan/Internal/Memory/: AllocationTypeBit.hpp  AllocationUsage.hpp  Allocator.cpp  Allocator.hpp  MappedMemory.cpp  MappedMemory.hpp  MemoryTypeBit.hpp
src/Graphics/Vulkan/Internal/Pipeline/: AttributeFormat.cpp  AttributeFormat.hpp  DescriptorOptions.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorType.hpp  Pipeline.cpp  Pipeline.hpp  PipelineStage.cpp  PipelineStage.hpp  PipelineStageBit.hpp  RenderPass.cpp  RenderPass.hpp  ShaderModule.cpp  ShaderModule.hpp  ShaderStageBit.hpp
src/Graphics/Vulkan/Internal/Sync/: Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
src/Graphics/Vulkan/Internal/Vulkan/: Device.cpp  Device.hpp  ErrorCallbacks.cpp  ErrorCallbacks.hpp  Extensions.cpp  Extensions.hpp  Frame.cpp  Frame.hpp  Functions.cpp  Instance.cpp  Instance.hpp  Layers.cpp  Layers.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  SwapchainFormat.hpp  SwapchainSupport.cpp  SwapchainSupport.hpp  Vulkan.cpp  Vulkan.hpp
src/Graphics/Vulkan/Internal/Wrapper/: Handles.hpp  Resource.cpp  Resource.hpp
src/Graphics/Vulkan/Pipeline/: Attribute.cpp  Attribute.hpp  Descriptor.hpp  PipelineOptions.hpp  RenderPipeline.hpp  Vertex.hpp  Vertices.cpp  Vertices.hpp
src/Graphics/Window/: Key.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp  WindowException.hpp
(+250 files in other folders)
