set(DEPS
    Vulkan::Vulkan
    GPUOpen::VulkanMemoryAllocator
    glfw)
set(INCLUDES
    ./)
set(SYSTEM_INCLUDES
    ${GLFW_INCLUDE}
    ${VMA_INCLUDE})
set(SOURCES
    main.cpp
    Config.cpp
    Resources.cpp)
set(TESTS)

add_subdirectory(Core)
add_subdirectory(Graphics)
add_subdirectory(Engine)
MAIN_MODULE(clone)
